Made the database 🤖